# OTP-DS-to-Grist

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Procfile  README.md  Taskfile.yml  api_validator.py  app.py  constants.py  deleted_dossiers_checker.py  doc-technique.md  docker-compose.override.yml  docker-compose.yml  formatter.py  grist_processor_working_all.py  hide_id_columns.py  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  queries.py  queries_config.py  queries_extract.py  queries_graphql.py  queries_util.py  repetable_processor.py  requirements.txt  schema_utils.py  shell.nix  sync_task_manager.py  task_manager.py
.devcontainer/: devcontainer.json  docker-compose.override.yml
.github/: dependabot.yml
configuration/: README.md  config_manager.py
database/: README.md  database_manager.py  models.py
docs/: deploy.md  install.md  technique.md
front/: README.md  package-lock.json  package.json  vite.config.js  vitest.config.js  vitest.setup.js
static/: config.js  filters.js  gristContext.js  logs.js  sync.js  utils.js
sync/: README.md  environment_config.py  error_parser.py  scheduled_sync.py  sync_manager.py  sync_result_parser.py
templates/: README.md  _sync_banner.html  base.html  configuration.html  debug.html  dn_accordion.html  execution.html  grist_accordion.html  index.html  sync_progression.html  use-otp.html  wip.html
tests/: README.md  gristContext.test.js
utils/: README.md  api_validator.py  constants.py  environment_config.py  formatter.py  (+3 more)
(+83 files in other folders)
